<resources>
    <string name="app_name">Inventory App Stage 1</string>
    <string name="add_item">Add product</string>
    <string name="action_save">Save product</string>
    <string name="action_delete">Delete product</string>
    <string name="category_products">Product</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_supplier_name">Supplier Name</string>
    <string name="hint_product_supplier_phone">Supplier Phone</string>
</resources>
