<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_product_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
            <EditText
                android:id="@+id/edit_product_quantity"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
            <EditText
                android:id="@+id/edit_product_supplier_name"
                android:hint="@string/hint_product_supplier_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
            <EditText
                android:id="@+id/edit_product_supplier_phone"
                android:hint="@string/hint_product_supplier_phone"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
        <TextView
            android:text="@string/category_products"
            style="@style/CategoryStyle" />
    </LinearLayout>
</LinearLayout>
